# linux-course

./: README.md
02_TerminalProject/: Makefile  Show.c
03_Multifile/: Makefile  fun.c  prog.c
04_Text/: randomize.sh
05_Debugging/: Makefile  range.c  test_1.gdb  test_2.gdb
06_TracingFencing/: Makefile  move.c
07_Environmental/: meson.build  rhasher.c  test.sh
08_Regexps/: esub.c  meson.build  test.sh
09_Testing/: buf.c  buf.h  meson.build
09_Testing/tests/: common.h  init_free.c  push.c
10_I18n/: CMakeLists.txt  main.c  ru.po
12_PatchInstall/: CMakeLists.txt
12_PatchInstall/man/: localized_program
